--- a/css/index.css
+++ b/css/index.css
@@ -67,17 +67,31 @@ footer {
 @media (max-width: 768px) {
   .box-wrap {
     flex-direction: column;
-  }
+}
 }
 
 body {
     max-width: 100%;
 }
 
-.top-image{
+.top-image {
   background-image: url("https://pixabay.com/get/eb32b10f2bfc1c3e955d4604ef494193fe76e7d41bb8194192f8c6/england-270038.jpg?attachment、https://pixabay.com/ja/%E3%82%A4%E3%82%AE%E3%83%AA%E3%82%B9-%E9%A2%A8%E6%99%AF-%E8%8B%B1%E5%9B%BD%E3%81%AE%E6%99%AF%E8%89%B2-%E6%9C%A8-%E3%82%B0%E3%83%AA%E3%83%BC%E3%83%B3-270038/");
   height: 500px;
   width: 100%;
   background-size: cover;
   background-position: center center;
+}
+
+@media screen and (max-width: 768px){
+  .top-image {
+    width: 100%;
+    height: 250px;
+}
+}
+
+@media screen and (min-width: 769px){
+    .top-image{
+        width: 100%;
+        height: 500px;
+    }
 }
