--- a/css/index.css
+++ b/css/index.css
@@ -22,16 +22,34 @@ body{
 .box1 {
     border:solid 3px #ff0000;
     margin: 20px;
+    background-color: #ffdbdb;
+    width: 400px;
+}
+
+.title1 {
+    background-color: #ff7f7f;
 }
 
 .box2 {
     border:solid 3px #4169e1;
     margin: 20px;
+    background-color: #dbdbff;
+    width: 400px;
+}
+
+.title2{
+    background-color: #7f7fff;
 }
 
 .box3 {
     border:solid 3px #008000;
     margin: 20px;
+    background-color: #dbffdb;
+    width: 400px;
+}
+
+.title3 {
+    background-color: #7fff7f;
 }
 
 h1 {
@@ -45,6 +63,7 @@ h2 {
 
 h3 {
     text-align: center;
+    margin: 0;
 }
 
 footer {
@@ -62,12 +81,29 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+
+    
 }
 
 @media (max-width: 768px) {
   .box-wrap {
     flex-direction: column;
 }
+ .box1 {
+     width: 250px;
+     margin: 0 auto;
+     margin-bottom: 20px;
+ }
+ .box2 {
+     width: 250px;
+     margin: 0 auto;
+     margin-bottom: 20px;
+ }
+ .box3 {
+     width: 250px;
+     margin: 0 auto;
+     margin-bottom: 20px;
+ }
 }
 
 body {
@@ -75,7 +111,7 @@ body {
 }
 
 .top-image {
-  background-image: url("https://pixabay.com/get/eb32b10f2bfc1c3e955d4604ef494193fe76e7d41bb8194192f8c6/england-270038.jpg?attachment、https://pixabay.com/ja/%E3%82%A4%E3%82%AE%E3%83%AA%E3%82%B9-%E9%A2%A8%E6%99%AF-%E8%8B%B1%E5%9B%BD%E3%81%AE%E6%99%AF%E8%89%B2-%E6%9C%A8-%E3%82%B0%E3%83%AA%E3%83%BC%E3%83%B3-270038/");
+  background-image: url("../gazou/england-270038.jpg");
   height: 500px;
   width: 100%;
   background-size: cover;
